feat(TF): Remove use of JDK 21 preview features