@@ -68,10 +68,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <compilerArguments> --enable-preview </compilerArguments>
-                    <jvmArguments> --enable-preview</jvmArguments>
-                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -90,22 +86,7 @@
                         <buildArg> --enable-native-access=ALL-UNNAMED </buildArg>
                         <buildArg> -H:+ForeignAPISupport</buildArg>
                         <buildArg> -H:+UnlockExperimentalVMOptions</buildArg>
-                        <buildArg> --enable-preview</buildArg>
                     </buildArgs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <enablePreview>true</enablePreview>
                 </configuration>
             </plugin>
             <plugin>
